  * Added a column on list clients that shows if a client has scheduled jobs.
  * Added "-p" on list backups workflow to mark the backups that might have failed with colors.
  * Added "-C" on addclient workflow to allow the configuration of the client without installing the dependencies.
  * Debian 10 Support on install client workflow.
  * Added ReaR 2.5 support on Debian 9.

 -- Néfix Estrada <nefix@brainupdaters.net>  Wed, 15 May 2019 00:00:00 +0100

drlm (2.2.1) stable release; urgency=high
  * Updated ssh_install_rear_xxx funcitons to solve (issue #62).
  * Ubuntu 18.04 support (issue #81).
  * Fixed Mac address change not reflected on PXE (issue #65).
  * Solve certificate deployment to clients (issue #66).
  * Improve sched log cleanups (issue #67).
  * Improve addclient and addnetwork database ID allocation (issue #69).
  * New variable SSH_PORT has been created on default.conf to allow user to choose the ssh port (issue #70)
  * Improve security on HTTP server getting the client config. (issue #76).
  * Delete client related jobs in delclient workflow (issue #82).
  * Updated timeout for drlm-stord.service (issue #74).
  * Modnetwork server ip now modify client.cfg files (issue #77).  
  * In modnetwork if netmask is not specified is taken database saved netmask.
  * In addnetwork if network IP is not specified will be calculated (issue #84).
  * Problem with PXE folder file parsing fixed (issue #86).
  * Automatically remove DR files after failed backup (issue #90).

 -- Pau Roura <pau@brainupdaters.net>  Wed, 03 Oct 2018 00:00:00 +0100

drlm (2.2.0) stable release; urgency=high

  * "Make deb" improved deleting residual files.
  * NEW Real time clients log in DRLM server.
  * NEW bash_completion feature added to facilitate the use.
  * It is possible to perform a "rear recover" without the parameters DRLM_SERVER, REST_OPTS and ID.
  * listbackup, listclient and listnetwork with "-A" parameter by default.