@@ -217,7 +217,7 @@ service drlm-stord start
 %endif
 
 %changelog
-* Wed May 15 2019 Néfix Estrada <nefix@brainupdaters.net> 2.3.0
+* Mon Jun 10 2019 Néfix Estrada <nefix@brainupdaters.net> 2.3.0
 - Golang DRLM API replacing Apache2 and CGI-BIN.
 - Listbackup command now shows size and duration of backup.
 - Improved database version control.
@@ -230,7 +230,8 @@ service drlm-stord start
 - Added "-p" on list backups workflow to mark the backups that might have failed with colors.
 - Added "-C" on addclient workflow to allow the configuration of the client without installing the dependencies.
 - Debian 10 Support on install client workflow.
-- Added ReaR 2.5 support on Debian 9.
+- Added ReaR 2.5 support on Debian 9, Debian8, Ubuntu 18, Ubuntu 16 and Ubuntu 14.
+- Added OS version and ReaR version in listclient.
 
 * Wed Oct 03 2018 Pau Roura <pau@brainupdaters.net> 2.2.1
 - Updated ssh_install_rear_xxx funcitons (issue #62).
