@@ -70,5 +70,7 @@ CREATE TABLE IF NOT EXISTS "counters" (
 
 ALTER TABLE backups ADD COLUMN "duration" VARCHAR(12);
 ALTER TABLE backups ADD COLUMN "size" VARCHAR(12);
+ALTER TABLE clients ADD COLUMN "os" VARCHAR(45);
+ALTER TABLE clients ADD COLUMN "rear" VARCHAR(45);
 
 COMMIT;
