@@ -11,9 +11,10 @@ drlm (2.3.0) stable release; urgency=high
   * Added "-p" on list backups workflow to mark the backups that might have failed with colors.
   * Added "-C" on addclient workflow to allow the configuration of the client without installing the dependencies.
   * Debian 10 Support on install client workflow.
-  * Added ReaR 2.5 support on Debian 9.
+  * Added ReaR 2.5 support on Debian 9, Debian8, Ubuntu 18, Ubuntu 16 and Ubuntu 14.
+  * Added OS version and ReaR version in listclient.
 
- -- Néfix Estrada <nefix@brainupdaters.net>  Wed, 15 May 2019 00:00:00 +0100
+ -- Néfix Estrada <nefix@brainupdaters.net>  Mon, 10 Jun 2019 00:00:00 +0100
 
 drlm (2.2.1) stable release; urgency=high
   * Updated ssh_install_rear_xxx funcitons to solve (issue #62).
